Added employee Dashboard and Update component

--- a/frontend/src/app/modules/admin/components/update-task/update-task.component.html
+++ b/frontend/src/app/modules/admin/components/update-task/update-task.component.html
@@ -43,7 +43,7 @@
 
                 <mat-form-field appearance="outline" class="form-field">
                     <mat-label>Select the Status</mat-label>
-                    <mat-select formControlName="status" name="Priority" placeholder="Select Priority">
+                    <mat-select formControlName="status" name="Status" placeholder="Select Status">
                         <mat-option *ngFor="let status of listOfStatus" [value]="status">
                             {{status}}
                         </mat-option>
