Employee status update page added, minor bugs fixed

--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -20,10 +20,12 @@
                 font-weight: bold;
                 color: #108ee9;
                 margin-bottom: 10px;
+                text-transform: uppercase;
             }
 
             .task-description {
                 margin-bottom: 10px;
+                text-transform: lowercase;
             }
 
                 .task-info {
