--- a/frontend/src/app/modules/employee/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/employee/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
             </div>
             <mat-divider></mat-divider>
             
-            <a mat-icon-button color="primary" class="update-button" [routerLink]="'/employee/task/' + task.id + '/edit'">
+            <a mat-icon-button color="primary" class="view-button" [routerLink]="'/employee/task/' + task.id + '/edit'">
                 <mat-icon>edit</mat-icon>
             </a>
         </div>
