--- a/frontend/src/app/modules/admin/components/update-task/update-task.component.scss
+++ b/frontend/src/app/modules/admin/components/update-task/update-task.component.scss
@@ -28,6 +28,7 @@ mat-card-title {
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     margin-bottom: 20px;
+    font-weight: 400;
 }
 
 form {
