--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,33 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-.navbar {
-    display: flex;
-    align-items: center;
-    pad: 0 16px;
-}
-
-.navbar-brand {
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    margin-right: 16px;
-}
-
-.spacer {
-    flex: 1;
-}
-
-button {
+.navigate-buttons {
     color: white;
     text-transform: uppercase;
-    margin-left: 8px;
-    font-family: "Montserrat", sans-serif;
+    left: 90%;
 }
 
-button.active {
+.navigate-buttons.active {
     font-weight: 600;
 }
 
 .custom-toolbar {
     background-color: #ff0000;
+}
+
+mat-toolbar {
+    position: relative;
+    z-index: 5;
+}
+
+.content {
+    padding: 24px;
+}
+
+mat-sidenav-container {
+    height: calc(100vh - 64px);
 }
