bug fiexs in popup window

--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
                     <mat-icon>edit</mat-icon>
                 </a>
                 
-                <button mat-icon-button color="warn" class="delete-button" (click)="surePopUp()">
+                <button mat-icon-button color="warn" class="delete-button" (click)="openDialog(task)">
                     <mat-icon>delete</mat-icon>
                 </button>
             </div>
