--- a/frontend/src/app/modules/admin/components/popup/popup.component.html
+++ b/frontend/src/app/modules/admin/components/popup/popup.component.html
@@ -1,4 +1,15 @@
-<h1>Are you sure?</h1>
-<p>Are you sure you want to delete this task?</p>
-<button>Yes, Delete</button>
-<button>No, Cancel</button>
+<div class="header">
+    <h2 mat-dialog-title>Delete Task?</h2>
+    <button mat-icon-button [mat-dialog-close]="false">
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
+
+<div mat-dialog-content>
+    Are you sure you want to delete this "{{ data.title }}" ?
+</div>
+
+<div mat-dialog-actions [align]="'end'">
+    <button mat-raised-button [mat-dialog-close]="true" (click)="deleteTask()" color="primary">Confirm</button>
+    <button mat-raised-button [mat-dialog-close]="false">Cancel</button>
+</div>
