--- a/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.html
+++ b/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.html
@@ -1,13 +1,29 @@
-<div class="sidenav-header">
+<div class="sidenav-header" *ngIf="isAdminLogged">
     <img [width]="profilePicSize()" [height]="profilePicSize()" 
-    src="https://static.vecteezy.com/system/resources/previews/009/749/751/original/avatar-man-icon-cartoon-male-profile-mascot-illustration-head-face-business-user-logo-free-vector.jpg" alt="Avatar">
+    src="../../../assets/icon1.png" alt="Avatar">
     <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
         <h2 *ngIf="!sideNavCollapsed()">{{ this.user.role }}</h2>
     </div>
 </div>
-<mat-nav-list>
-    <a mat-list-item *ngFor="let item of menuItems()" [routerLink]="item.route">
+<mat-nav-list *ngIf="isAdminLogged">
+    <a mat-list-item *ngFor="let item of adminMenuItems()" [routerLink]="item.route"
+    routerLinkActive #rla="routerLinkActive" [activated]="rla.isActive">
     <mat-icon matListItemIcon> {{ item.icon }} </mat-icon>
     <span matListItemTitle *ngIf="!sideNavCollapsed()"> {{ item.label }} </span>
+    </a>
+</mat-nav-list>
+
+<div class="sidenav-header" *ngIf="isEmployeeLogged">
+    <img [width]="profilePicSize()" [height]="profilePicSize()" 
+    src="../../../assets/icon2.png" alt="Avatar">
+    <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
+        <h2 *ngIf="!sideNavCollapsed()">{{ this.user.role }}</h2>
+    </div>
+</div>
+<mat-nav-list *ngIf="isEmployeeLogged">
+    <a mat-list-item *ngFor="let item of employeeMenuItems()" [routerLink]="item.route"
+    routerLinkActive #rla="routerLinkActive" [activated]="rla.isActive">
+        <mat-icon matListItemIcon> {{ item.icon }} </mat-icon>
+        <span matListItemTitle *ngIf="!sideNavCollapsed()"> {{ item.label }} </span>
     </a>
 </mat-nav-list>
