--- a/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.scss
+++ b/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.scss
@@ -3,6 +3,7 @@
     text-align: center;
 
     > img {
+        border: 3px solid black;
         border-radius: 100%;
         object-fit: cover;
         margin-bottom: 10px;
@@ -13,6 +14,8 @@
             margin: 0;
             font-size: 1rem;
             line-height: 1.5rem;
+            font-weight: 300;
+            color: goldenrod;
         }
 
         > p {
