--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,3 +1,27 @@
+<div class="sort-selection">
+    <mat-button-toggle-group appearance="legacy" name="sort-selection" aria-label="Sort by" class="button-toggle" (change)="sortTasksByToggleValue($event.value)" [hideSingleSelectionIndicator]="true">
+        <mat-button-toggle value="desc-date">
+            <mat-icon style="color: green;">access_time</mat-icon>
+            <mat-icon>arrow_downward</mat-icon>
+        </mat-button-toggle>
+        
+        <mat-button-toggle value="asc-date" >
+            <mat-icon style="color: green;">access_time</mat-icon>
+            <mat-icon>arrow_upward</mat-icon>
+        </mat-button-toggle>
+        
+        <mat-button-toggle value="desc-priority">
+            <mat-icon style="color: red">emergency</mat-icon>
+            <mat-icon>arrow_upward</mat-icon>
+        </mat-button-toggle>
+        
+        <mat-button-toggle value="asc-priority">
+            <mat-icon style="color: red">emergency</mat-icon>
+            <mat-icon>arrow_downward</mat-icon>
+        </mat-button-toggle>
+    </mat-button-toggle-group>
+</div>
+
 <div class="task-list">
     <mat-card class="task-card" *ngFor="let task of listOfTasks">
         <div class="task-details">
