--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,21 +1,3 @@
-.search-input {
-    display: flex;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-
-    input {
-        width: 300px; 
-        padding: 10px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        outline: none;
-    }
-}
-
 .task-list {
     display: flex;
     flex-wrap: wrap;
@@ -84,4 +66,13 @@
             }
         }
     }
+}
+
+.sort-selection {
+    display: flex;
+    justify-content: end;
+}
+
+.button-toggle {
+    transform: scale(0.9);
 }
