--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -22,6 +22,17 @@
     </mat-button-toggle-group>
 </div>
 
+<!-- yeni eklenen kod -->
+<div class="search-box">
+    <form>
+        <mat-form-field appearance="outline" class="form-field">
+            <mat-label>Search</mat-label>
+            <input matInput type="text" placeholder="Search" formControlName="keyword">
+        </mat-form-field>
+    </form>
+</div>
+<!-- --------------------- -->
+
 <div class="task-list">
     <mat-card class="task-card" *ngFor="let task of listOfTasks">
         <div class="task-details">
