--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -74,5 +74,10 @@
 }
 
 .button-toggle {
-    transform: scale(0.9);
+    transform: scale(0.8);
+}
+
+.search-box {
+    display: grid;
+    justify-content: center;
 }
