--- a/frontend/src/app/modules/admin/components/popup/popup.component.html
+++ b/frontend/src/app/modules/admin/components/popup/popup.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div mat-dialog-content>
-    Are you sure you want to delete "{{ data.title }}" ?
+    Are you sure you want to delete this "{{ data.title }}" ?
 </div>
 
 <div mat-dialog-actions [align]="'end'">
