--- a/frontend/src/app/modules/employee/dashboard/dashboard.component.scss
+++ b/frontend/src/app/modules/employee/dashboard/dashboard.component.scss
@@ -67,3 +67,17 @@
         }
     }
 }
+
+.sort-selection {
+    display: flex;
+    justify-content: end;
+}
+
+.button-toggle {
+    transform: scale(0.8);
+}
+
+.search-box {
+    display: grid;
+    justify-content: center;
+}
