--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -59,11 +59,10 @@
             <mat-divider></mat-divider>
             
         <div class="actions">
-            <!--
-                <button mat-icon-button color="accent" class="view-button" routerLink="/admin/task-details/{{task.id}}">
+                <button mat-icon-button color="accent" class="view-button" [routerLink]="'/admin/task/' + task.id+ '/view'">
                     <mat-icon>visibility</mat-icon>
                 </button>
-            -->
+            
                 <a mat-icon-button color="primary" class="update-button" [routerLink]="'/admin/task/' + task.id + '/edit'">
                     <mat-icon>edit</mat-icon>
                 </a>
