--- a/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -44,6 +44,10 @@
             .task-description {
                 margin-bottom: 10px;
                 text-transform: lowercase;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                max-width: 40px;
             }
 
                 .task-info {
@@ -89,10 +93,10 @@
 .sort-selection {
     display: flex;
     justify-content: end;
-}
-
-.button-toggle {
-    transform: scale(0.8);
+    
+    .button-toggle {
+        transform: scale(0.8);
+    }
 }
 
 .search-box {
