--- a/frontend/src/app/modules/employee/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/employee/dashboard/dashboard.component.html
@@ -52,10 +52,15 @@
                 </div>
             </div>
             <mat-divider></mat-divider>
-            
-            <a mat-icon-button color="primary" class="view-button" [routerLink]="'/employee/task/' + task.id + '/edit'">
-                <mat-icon>edit</mat-icon>
-            </a>
+            <div class="actions">
+                <button mat-icon-button color="accent" class="view-button" [routerLink]="'/employee/task/' + task.id+ '/view'">
+                    <mat-icon>visibility</mat-icon>
+                </button>
+                
+                <a mat-icon-button color="primary" class="view-button" [routerLink]="'/employee/task/' + task.id + '/edit'">
+                    <mat-icon>edit</mat-icon>
+                </a>
+            </div>
         </div>
     </mat-card>
 </div>
