--- a/frontend/src/app/modules/admin/components/update-task/update-task.component.html
+++ b/frontend/src/app/modules/admin/components/update-task/update-task.component.html
@@ -53,6 +53,18 @@
                     </mat-error>
                 </mat-form-field>
 
+                <mat-form-field appearance="outline" class="form-field">
+                    <mat-label>Select the task status</mat-label>
+                    <mat-select formControlName="taskStatus" name="taskStatus">
+                        <mat-option *ngFor="let status of listOfStatus" [value]="status">
+                            {{ status }}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="taskUpdateForm.get('taskStatus')?.hasError('required')">
+                        Status is required.
+                    </mat-error>
+                </mat-form-field>
+
                 <button mat-raised-button color="primary" type="submit" [disabled]="taskUpdateForm.invalid" (ngSubmit)="updateTask()">
                     Update Task
                 </button>
