--- a/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.scss
+++ b/frontend/src/app/components/custom-sidenav-component/custom-sidenav-component.component.scss
@@ -14,8 +14,8 @@
             margin: 0;
             font-size: 1rem;
             line-height: 1.5rem;
-            font-weight: 300;
-            color: goldenrod;
+            font-weight: 400;
+            color: #3F51B5;
         }
 
         > p {
