--- a/frontend/src/app/modules/employee/components/update-task/update-task.component.html
+++ b/frontend/src/app/modules/employee/components/update-task/update-task.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <mat-card >
-        <mat-card-title>Update Task</mat-card-title>
+        <mat-card-title>Update Task: <strong><br>{{ this.task.title }}</strong></mat-card-title>
         <mat-card-content>
             <form [formGroup]="employeeTaskUpdateForm" (ngSubmit)="updateTaskStatus()">
                 <mat-form-field appearance="outline" class="form-field">
-                    <mat-label>Select the Status</mat-label>
-                    <mat-select formControlName="status" name="Status" placeholder="Select Status">
+                    <mat-label>Select the current status</mat-label>
+                    <mat-select formControlName="status" name="Status" placeholder="Status">
                         <mat-option *ngFor="let status of listOfStatus" [value]="status">
                             {{status}}
                         </mat-option>
