--- a/frontend/src/app/modules/employee/components/update-task/update-task.component.html
+++ b/frontend/src/app/modules/employee/components/update-task/update-task.component.html
@@ -16,7 +16,7 @@
                 </mat-form-field>
 
                 <button mat-raised-button color="primary" type="submit" (ngSubmit)="updateTaskStatus()">
-                    Update Task
+                    Update Task<mat-icon matSuffix>edit</mat-icon>
                 </button>
             </form>
         </mat-card-content>
