--- a/frontend/src/app/modules/admin/components/post-task/post-task.component.html
+++ b/frontend/src/app/modules/admin/components/post-task/post-task.component.html
@@ -8,6 +8,7 @@
         <mat-form-field appearance="outline" class="form-field">
             <mat-label>Title</mat-label>
             <input matInput type="text" placeholder="Title" formControlName="title">
+            <mat-icon matSuffix>title</mat-icon>
             <mat-error *ngIf="taskForm.get('title')?.hasError('required')">
                 Title is required.
             </mat-error>
@@ -16,6 +17,7 @@
         <mat-form-field appearance="outline" class="form-field">
             <mat-label>Description</mat-label>
             <textarea matInput placeholder="Description" formControlName="description"></textarea>
+            <mat-icon matSuffix>description</mat-icon>
             <mat-error *ngIf="taskForm.get('description')?.hasError('required')">
                 Description is required.
             </mat-error>
@@ -68,7 +70,7 @@
         </mat-form-field>
 
     <button mat-raised-button color="primary" type="submit" [disabled]="taskForm.invalid"
-        (ngSubmit)="postTask()">Post Task</button>
+        (ngSubmit)="postTask()">Post Task <mat-icon matSuffix>send</mat-icon> </button>
     </form>
         </mat-card-content>
     </mat-card>
