--- a/frontend/src/app/modules/employee/dashboard/dashboard.component.html
+++ b/frontend/src/app/modules/employee/dashboard/dashboard.component.html
@@ -8,35 +8,13 @@
             </mat-select>
         </mat-form-field>
     </form>
-    <!--
-    <mat-button-toggle-group appearance="legacy" name="sort-selection" aria-label="Sort by" class="button-toggle" (change)="sortTasksByToggleValue($event.value)" [hideSingleSelectionIndicator]="true">
-        <mat-button-toggle value="desc-date">
-            <mat-icon style="color: green;">access_time</mat-icon>
-            <mat-icon>arrow_downward</mat-icon>
-        </mat-button-toggle>
-        
-        <mat-button-toggle value="asc-date" >
-            <mat-icon style="color: green;">access_time</mat-icon>
-            <mat-icon>arrow_upward</mat-icon>
-        </mat-button-toggle>
-        
-        <mat-button-toggle value="desc-priority">
-            <mat-icon style="color: red">emergency</mat-icon>
-            <mat-icon>arrow_upward</mat-icon>
-        </mat-button-toggle>
-        
-        <mat-button-toggle value="asc-priority">
-            <mat-icon style="color: red">emergency</mat-icon>
-            <mat-icon>arrow_downward</mat-icon>
-        </mat-button-toggle>
-    </mat-button-toggle-group>
-    -->
 </div>
 
 <div class="search-box">
     <form [formGroup]="searchForm">
         <mat-form-field appearance="outline" class="form-field">
             <mat-label>Search</mat-label>
+            <mat-icon matSuffix>search</mat-icon>
             <input matInput type="text" placeholder="Search" formControlName="searchText" [(ngModel)]="searchText">
         </mat-form-field>
     </form>
