--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,29 +2,38 @@
 
 @include mat.core();
 
-/*
-.darkTheme {
-    $dark-primary:mat.define-pallete(mat.$deep-purple-palette);
-    $dark-accent:mat.define-pallete(mat.$red-palette);
-    $dark-warn:mat.define-pallete(mat.$red-palette);
+$light-primary: mat.define-palette(mat.$indigo-palette, 500);
+$light-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$light-warn: mat.define-palette(mat.$red-palette);
 
-    $dark-theme:mat.define-dark-theme((color:(primary:$dark-primary, accent:$dark-accent, warn:$dark-warn)));
+$light-theme: mat.define-light-theme((
+ color: (
+   primary: $light-primary,
+   accent: $light-accent,
+   warn: $light-warn,
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
 
-    @include mat.all-component-themes($dark-theme);
-    @import 'customthmes';
+$dark-theme: mat.define-dark-theme((
+ color: (
+   primary: $light-primary,
+   accent: $light-accent,
+   warn: $light-warn,
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
+
+.dark-theme {
+    @include mat.all-component-colors($dark-theme);
 }
 
-.lightTheme {
-    $light-primary:mat.define-pallete(mat.$deep-purple-palette);
-    $light-accent:mat.define-pallete(mat.$red-palette);
-    $light-warn:mat.define-pallete(mat.$red-palette);
-
-    $light-theme:mat.define-light-theme((color:(primary:$light-primary, accent:$light-accent, warn:$light-warn)));
-
-    @include mat.all-component-themes($light-theme);
-    @import 'customthmes';
+.light-theme {
+    @include mat.all-component-colors($light-theme);
 }
-*/
+
 
 html, body { 
     height: 100%; 
