'add new task' card added

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -25,5 +25,5 @@
   <mat-sidenav-content class="content" [style.margin-left]="sidenavWitdh()">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container>-->
 <router-outlet></router-outlet>
